# bashcolor

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  type_info.json
.github/: renovate.json5
.github/workflows/: changelog.yaml  main.yaml
bashcolor/: __init__.py
ci/: config.yaml  requirements.txt
